chrome: fix not ensuring selected item is visible in view

--- a/src/browser/extensions/chrome/css/theme-default.css
+++ b/src/browser/extensions/chrome/css/theme-default.css
@@ -593,6 +593,11 @@ A.sd-text-item-title {
 }
 
 .sd-container-view {
+  overflow: auto;
+}
+
+/* Hack for JsTree. */
+#sd-folder-explorer .sd-container-view {
   overflow: hidden;
 }
 
